src/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');

:root {
  --dark-bg: #343a40;
}

body {
  font-family: 'Montserrat', sans-serif;
  margin: 0;
  background-image: url('../images/background.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  color: #ffffff;
  min-height: 100vh;
}

/*****Header*****/
header {
  padding: 10px;
}

#search {
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;
  min-width: 300px;
  max-width: 300px;
  padding: 13px;
  border: none;
  border-radius: 5px 0 0 5px;
  outline: none;
  background: rgba(255, 255, 255, 0.5);
  color: #ffffff;
}

#search::placeholder {
  color: #ffffff;
}

.search-container {
  display: flex;
  justify-content: right;
}

.search-button {
  width: 45px;
  height: 42px;
  border: 1px solid #ffffff;
  background: #ffffff;
  text-align: center;
  color: var(--dark-bg);
  border-radius: 0 5px 5px 0;
  cursor: pointer;
  font-size: 20px;
}

input[type='search']::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

input[type='search']::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

input[type='search']::-webkit-search-decoration,
input[type='search']::-webkit-search-cancel-button,
input[type='search']::-webkit-search-results-button,
input[type='search']::-webkit-search-results-decoration {
  display: none;
}

input[type='search'],
button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  
}

/*****Main Section*****/
#weather-data {
  margin: 6.5% 0 2% 0;
  padding: 0 5%;
}

.weather-data-top {
  display: flex;
}

.weather-data-bottom {
  display: flex;
}

.weather-desc {
  font-size: 1.2rem;
  margin: 0 0 -0.2rem 0;
  padding: 0 0 0 0.1rem;
}

.location {
  font-size: 3.5rem;
  margin: 0;
}

.temperature {
  font-size: 8rem;
  font-weight: bold;
  margin: 0;
}

.temperature::after {
  content: '°C';
  font-size: 1.5rem;
  vertical-align: 300%;
}

.feels-like::after {
  content: '°C';
  font-size: 0.65rem;
  vertical-align: 60%;
}

.condition-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 1.875rem 1.25rem 0 1.25rem;
  padding: 0 0 0 1.875rem;
  border-left: solid 3px #ffffff;
  height: 5.625rem;
}

.condition-info > p {
  margin: 0.4375rem 0;
  font-weight: bold;
}

.time {
  font-size: 1.2rem;
  padding: 0 0 0 0.2rem;
  margin: -0.2rem 0 0 0;
}

.icon-container {
  margin: -0.3125rem 0 0 0;
}

/*****Forecast Section*****/
#forecast {
  padding: 2% 5%;
}

.weather-icon {
  color: #ffffff;
  width: 100%;
  height: auto;
}

.forecast-button {
  margin-right: 2rem;
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;
  font-size: 1rem;
  padding: 0.6rem 1.2rem;
  border: none;
  cursor: pointer;
  background-color: transparent;
  color: #ffffff;
  max-width: 98px;
  min-width: 98px;
}

.selected-button {
  border: 2px solid #f5f5f5;
  border-radius: 3px;
}

.weather-forecast {
  display: flex;
  justify-content: space-between;
  margin-top: 1.2rem;
}

.weather-forecast > div {
  background-color: transparent;
  text-align: center;
  box-sizing: border-box;
}

.forecast-container {
  display: flex;
}

.forecast > h3 {
  font-size: 1.3rem;
  margin: 0.5rem 0;
}

.forecast > p {
  margin: 0.5rem 0;
  font-weight: bold;
  font-size: 1.3rem;
}

.daily-forecast,
.hourly-forecast {
  display: flex;
  justify-content: space-between;
  margin-top: 1.2rem;
}

.daily-forecast > div,
.hourly-forecast > div {
  background-color: transparent;
  text-align: center;
  box-sizing: border-box;
}

.circle {
  height: 5px;
  width: 5px;
  border-radius: 50%;
  border: 1px solid #ffffff;
  margin: 0.0625rem 0.25rem 0 0.25rem;
  cursor: pointer;
}

.circle-active {
  background-color: #ffffff;
}

.arrow {
  margin: 0 0.25rem;
  font-size: 20px;
  cursor: pointer;
}

.forecast-arrows {
  display: flex;
  align-items: center;
}

/*****Media Query Breakpoints*****/
@media (max-width: 768px) {
  :root {
    font-size: 13px;
  }

  .search-container {
    justify-content: center;
  }

  #weather-data {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .weather-data-top {
    text-align: center;
    flex-direction: column-reverse;
  }

  .icon-container {
    width: 100%;
    margin-bottom: -1.5rem;
  }

  .icon-container .weather-icon {
    width: 6.25rem;
  }
}

@media (max-width: 480px) {
  .daily-forecast {
    flex-direction: column;
  }

  .hourly-forecast {
    flex-direction: column;
  }

  .forecast {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .forecast-container {
    justify-content: center;
  }

  .forecast > h3 {
    width: 4.2rem;
  }

  .forecast > p {
    width: 4.2rem;
  }

  .forecast > img {
    width: 20%;
    margin-left: auto;
  }
}

@media (max-width: 375px) {
  :root {
    font-size: 9px;
  }

  .forecast-button {
    max-width: 60px;
    min-width: 60px;
  }

  #search {
    max-width: 205px;
    min-width: 205px;
  }
}

